--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = ststm32
 board = nucleo_f303re
 framework = arduino
+
+[platformio]
+; Use the official PlatformIO mirror
+;package_manager_mirror = https://dl.platformio.org/packages/manifest.json
+
+; Uncomment one of the alternative mirrors if needed
+package_manager_mirror = https://mirror.sjtu.edu.cn/pypi/web/packages/manifest.json
+; package_manager_mirror = https://pypi.tuna.tsinghua.edu.cn/simple/manifest.json
