--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nucleo_f303re]
+[env:nucleo_l432kc]
 platform = ststm32
-board = nucleo_f303re
+board = nucleo_l432kc
 framework = arduino
 
 [platformio]
-; Use the official PlatformIO mirror
-;package_manager_mirror = https://dl.platformio.org/packages/manifest.json
-
-; Uncomment one of the alternative mirrors if needed
 package_manager_mirror = https://mirror.sjtu.edu.cn/pypi/web/packages/manifest.json
-; package_manager_mirror = https://pypi.tuna.tsinghua.edu.cn/simple/manifest.json
