--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nucleo_f303re]
+[env:nucleo_l432kc]
 platform = ststm32
-board = nucleo_f303re
+board = nucleo_l432kc
 framework = arduino
